# ggwave

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  GEMINI.md  Makefile  README-tmpl.md  README.md  autonomous_agent.py  bridge.sh  cmake_install.cmake  gibberlink_server.py  install_manifest.txt
bindings/: Makefile  cmake_install.cmake
bindings/python/: Makefile  ggwave.cpp  setup-tmpl.py  setup.py
examples/: ggwave-common-sdl2.cpp  ggwave-common-sdl2.h
examples/ggwave-cli/: CMakeLists.txt  main.cpp
examples/ggwave-to-file/: CMakeLists.txt
src/: Makefile  cmake_install.cmake
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
